--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@
 
 html,
 body{
-    background-color: #FFF;
+    /*background-color: #FFF;
     color: #555;
     font-family: 'lato', 'arial', sans-serif;
     font-size: 20ppx;
     font-weight: 300;
     text-rendering: optimizeLegibility;
-    overflow-x: hidden;
+    overflow-x: hidden;*/
 }
 
 /*-----------------------------------------------------------------*/
