--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    //box-sizing: border-box;
 }
 
 html,
@@ -29,3 +29,10 @@ body{
     max-width: 1140px;
     margin: 0 auto;
 }
+
+h1, h2 {
+    text-transform: uppercase
+    color: #2E64FE;
+}
+
+
