--- a/style.css
+++ b/style.css
@@ -36,4 +36,11 @@ h1, h2 {
     color: #2E64FE;
 }
 
+/*-----------------------------------------------------------------*/
+/* HEADING */
+/*-----------------------------------------------------------------*/
 
+.main-heading {
+    top: 50%;
+    left: 50%;
+}
