--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ h1, h2 {
 /*-----------------------------------------------------------------*/
 
 .main-heading {
+    //position: absolute;
+    width: 1100px;
     top: 50%;
     left: 50%;
+    //transform: translate(-50%, -50%);
 }
