--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 * {
     margin: 0;
     padding: 0;
-    //box-sizing: border-box;
+
 }
 
 html,
@@ -32,8 +32,20 @@ body{
 
 h1, h2 {
     text-transform: uppercase;
-    margin: 0 auto;
     color: #2E64FE;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+h1 {
+    vertical-align: middle;
+    text-align:center;
+}
+
+
+p {
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 /*-----------------------------------------------------------------*/
@@ -41,9 +53,27 @@ h1, h2 {
 /*-----------------------------------------------------------------*/
 
 .main-heading {
-    position: absolute;
-    width: 1100px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    
+    height:100%; 
+    display: table;
+    
+}
+
+.profile-photo {
+    float: right;
+    height: 100px;
+    width: auto;
+    border-radius: 10%;
+    border: solid;
+    margin: 10px; 
+        
+}
+
+/*-----------------------------------------------------------------*/
+/* Personal */
+/*-----------------------------------------------------------------*/
+
+.personal-test {
+    
+    max-width: 1000px;
 }
