--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ h1, h2 {
     color: #2E64FE;
     margin-bottom: 20px;
     margin-top: 20px;
+    
+    
 }
 
 h1 {
@@ -42,20 +44,36 @@ h1 {
     text-align:center;
 }
 
+h2 {
+    border-bottom: 5px solid;
+    width: 30%
+}
+
 
 p {
     margin-bottom: 10px;
     margin-top: 10px;
+    text-align: justify;
+    letter-spacing: 0.0625em;
+}
+
+.hf-style {
+    
+    background-color: #e0e0e0;
+    
 }
 
 /*-----------------------------------------------------------------*/
 /* HEADING */
 /*-----------------------------------------------------------------*/
 
+
+
+
 .main-heading {
-    
-    height:100%; 
+     
     display: table;
+    
     
 }
 
@@ -98,9 +116,24 @@ p {
     margin-right: 60px;
 }
 
+/*-----------------------------------------------------------------*/
+/* Ideal */
+/*-----------------------------------------------------------------*/
 
 
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    clear: both;
+    height: 80px;
+    
+}
 
-
+footer p {
+    text-align: center;
+    padding-top: 25px;
+    
+}
 
 
