--- a/style.css
+++ b/style.css
@@ -30,6 +30,18 @@ body{
     margin: 0 auto;
 }
 
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 h1, h2 {
     text-transform: uppercase;
     color: #2E64FE;
@@ -62,6 +74,7 @@ p {
     background-color: #e0e0e0;
     
 }
+
 
 /*-----------------------------------------------------------------*/
 /* HEADING */
@@ -122,7 +135,6 @@ p {
 
 
 footer {
-    position: absolute;
     width: 100%;
     bottom: 0;
     clear: both;
@@ -136,4 +148,14 @@ footer p {
     
 }
 
+/*-----------------------------------------------------------------*/
+/* Personal */
+/*-----------------------------------------------------------------*/
+
+.section-Personal img {
+    
+    height: 400px;
+    width: auto;
+    
+}
 
